@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-06-09T16:31:58Z",
-  "count_outdated" : 236,
-  "uniques_outdated" : 53,
-  "count" : 237,
-  "uniques" : 54,
+  "timestamp" : "2022-06-28T02:03:42Z",
+  "count_outdated" : 237,
+  "uniques_outdated" : 54,
+  "count" : 239,
+  "uniques" : 55,
   "views" : [
     {
-      "timestamp": "2022-06-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "timestamp": "2022-06-27T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
