@@ -1,3 +1,10 @@
+2022-06-28T02:03:42Z:
+* notice: last 14d: unq all: 1 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 53 236 / 54 237
+* notice: next accum: outdated-unq outdated-all / unq all: 54 237 / 55 239
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-06-03] / [2022-06-27]
+
 2022-06-09T16:31:58Z:
 * notice: last 14d: unq all: 1 1
 * notice: prev accum: outdated-unq outdated-all / unq all: 52 232 / 54 237
